--- a/css/common.scss
+++ b/css/common.scss
@@ -163,10 +163,6 @@ footer {
   margin-left: 10px; }
   .list-inline li {
     font-weight: 300; }
-
-.social_list {
-  display: inline-block;
-  vertical-align: middle; }
   .social_list a {
     text-decoration: none !important; }
 
@@ -254,6 +250,9 @@ p, li {
             font-size: 15px;
             text-align:center ;
           }
+        .social_list{
+          display: inline-block;
+        }
       }
 
     .copyrights .list-inline {
