--- a/css/common.scss
+++ b/css/common.scss
@@ -49,6 +49,7 @@ a:hover{
           max-height: 50px;
           position:relative;
           bottom: 15px;
+          right: 10px;
         }
         .brand-name{
           display:inline-block;
